Añadí un enlace al button.
Puse un enlace al botón del header, para que tenga funcionalidad básica!

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <button>
             <!--El span, viene a ser el icono de mensaje que hay dentro del boton: "Contact Us"-->
             <span class="material-symbols-outlined"> chat_paste_go </span>
-            Contact Us
+            <a href="">Contact Us</a>
           </button>
         </div>
       </div>
