--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="style.css">
   <title>NavBar</title>
 </head>
 <body>
@@ -49,9 +49,8 @@
           <span></span>
   </div>
    </header>
-    <script src="index.js"></script>
 </body>
 <!--EL JS DE EL ICONO-->
-<script src="/Js/index.js"></script>
 </body>
+<script src="./index.js"></script>
 </html>
